Lógica do kit concluida